--- a/Setupx86/Product.wxs
+++ b/Setupx86/Product.wxs
@@ -24,25 +24,27 @@
 			<Directory Id="ProgramFilesFolder">
 				<Directory Id="INSTALLFOLDER" Name="$(var.fcardLauncher.TargetName)" />
 			</Directory>
-		</Directory>
+
+      <Directory Id="SystemFolder" Name="SystemFolder"/>
+    </Directory>
 	</Fragment>
 
-	<Fragment>
+  <Fragment>
 		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-    <Component Id="ProductComponentExe" KeyPath="yes" Guid="DEC489B8-6231-4234-BBFC-BCBBFDF0A368">
-      <File Source="$(var.fcardLauncher.TargetPath)" />
-    </Component>
+      <Component Id="ProductComponentExe" KeyPath="yes" Guid="DEC489B8-6231-4234-BBFC-BCBBFDF0A368">
+        <File Source="$(var.fcardLauncher.TargetPath)" />
+      </Component>
 
-     <Component Id="ProductComponentRegistry" KeyPath="yes" Guid="34EF39E0-49C7-45FD-A919-4DC8B3C2D1A2">  
-       <RegistryKey Id='RegInstallForAutorun'
-        Root="HKLM" Action="createAndRemoveOnUninstall"
+      <Component Id="ProductComponentRegistry" KeyPath="yes" Guid="34EF39E0-49C7-45FD-A919-4DC8B3C2D1A2">
+        <RegistryKey Id='RegInstallForAutorun'
+        Root="HKLM" ForceCreateOnInstall="yes" ForceDeleteOnUninstall="yes"
         Key="Software\Microsoft\Windows\CurrentVersion\Run" >
-        <RegistryValue
-          Name="$(var.fcardLauncher.TargetName) start up"
-          Value="[INSTALLFOLDER]$(var.fcardLauncher.TargetFileName)"
-          Type="string" />
+          <RegistryValue
+           Name="$(var.fcardLauncher.TargetName) start up"
+           Value="[INSTALLFOLDER]$(var.fcardLauncher.TargetFileName)"
+           Type="string" />
         </RegistryKey>
       </Component>
-		</ComponentGroup>
+    </ComponentGroup>
 	</Fragment>
 </Wix>
